linux configs: align with purism; remove TMPFS, add sysctl requirements
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/linux-librem_common.config
+++ b/config/linux-librem_common.config
@@ -157,6 +157,7 @@ CONFIG_INITRAMFS_COMPRESSION_XZ=y
 # CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_LD_ORPHAN_WARN=y
+CONFIG_SYSCTL=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
 CONFIG_HAVE_PCSPKR_PLATFORM=y
 CONFIG_BPF=y
@@ -2598,7 +2599,7 @@ CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 #
 CONFIG_PROC_FS=y
 # CONFIG_PROC_KCORE is not set
-# CONFIG_PROC_SYSCTL is not set
+CONFIG_PROC_SYSCTL=y
 # CONFIG_PROC_PAGE_MONITOR is not set
 # CONFIG_PROC_CHILDREN is not set
 CONFIG_PROC_PID_ARCH_STATUS=y
