--- a/config/linux-linuxboot.config
+++ b/config/linux-linuxboot.config
@@ -264,9 +264,9 @@ CONFIG_ISO9660_FS=y
 CONFIG_JOLIET=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
-# CONFIG_PROC_SYSCTL is not set
+CONFIG_PROC_SYSCTL=y
 # CONFIG_PROC_PAGE_MONITOR is not set
-CONFIG_TMPFS=y
+CONFIG_TMPFS=n
 CONFIG_HUGETLBFS=y
 CONFIG_EFIVAR_FS=y
 # CONFIG_MISC_FILESYSTEMS is not set
