--- a/config/linux-x230-legacy.config
+++ b/config/linux-x230-legacy.config
@@ -1978,7 +1978,6 @@ CONFIG_RTC_DRV_CMOS=y
 # DMABUF options
 #
 CONFIG_SYNC_FILE=y
-# CONFIG_UDMABUF is not set
 # CONFIG_DMABUF_MOVE_NOTIFY is not set
 # CONFIG_DMABUF_SELFTESTS is not set
 # CONFIG_DMABUF_HEAPS is not set
@@ -2249,12 +2248,8 @@ CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PID_ARCH_STATUS=y
 CONFIG_KERNFS=y
 CONFIG_SYSFS=y
-CONFIG_TMPFS=y
-# CONFIG_TMPFS_POSIX_ACL is not set
-# CONFIG_TMPFS_XATTR is not set
-# CONFIG_TMPFS_INODE64 is not set
+# CONFIG_TMPFS is not set
 # CONFIG_HUGETLBFS is not set
-CONFIG_MEMFD_CREATE=y
 CONFIG_ARCH_HAS_GIGANTIC_PAGE=y
 # CONFIG_CONFIGFS_FS is not set
 CONFIG_EFIVAR_FS=m
