Remove unneeded changes
TODO: squash

Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/busybox.config
+++ b/config/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.36.1
-# Sat Dec  9 12:13:51 2023
+# Thu Oct  5 11:19:09 2023
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -1055,7 +1055,7 @@ CONFIG_FEATURE_MIME_CHARSET=""
 CONFIG_FEATURE_SHOW_THREADS=y
 # CONFIG_FREE is not set
 # CONFIG_FUSER is not set
-CONFIG_IOSTAT=y
+# CONFIG_IOSTAT is not set
 CONFIG_KILL=y
 CONFIG_KILLALL=y
 CONFIG_KILLALL5=y
@@ -1088,8 +1088,8 @@ CONFIG_FEATURE_TOP_SMP_CPU=y
 CONFIG_FEATURE_TOP_DECIMALS=y
 CONFIG_FEATURE_TOP_SMP_PROCESS=y
 CONFIG_FEATURE_TOPMEM=y
-CONFIG_UPTIME=y
-CONFIG_FEATURE_UPTIME_UTMP_SUPPORT=y
+# CONFIG_UPTIME is not set
+# CONFIG_FEATURE_UPTIME_UTMP_SUPPORT is not set
 # CONFIG_WATCH is not set
 
 #
