--- a/config/linux-qemu.config
+++ b/config/linux-qemu.config
@@ -199,7 +199,7 @@ CONFIG_EPOLL=y
 # CONFIG_TIMERFD is not set
 CONFIG_EVENTFD=y
 CONFIG_SHMEM=y
-CONFIG_AIO=y
+# CONFIG_AIO is not set
 CONFIG_IO_URING=y
 CONFIG_ADVISE_SYSCALLS=y
 CONFIG_MEMBARRIER=y
