WiP: Boards configuration unification between x230-hotp-maximized and nitrokey boards: enable Automatic boot when HOTP valid after 5 seconds
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/boards/x230-hotp-maximized/x230-hotp-maximized.config
+++ b/boards/x230-hotp-maximized/x230-hotp-maximized.config
@@ -17,11 +17,12 @@ CONFIG_LINUX_CONFIG=config/linux-x230-maximized.config
 #export CONFIG_DEBUG_OUTPUT=y
 #export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=y
 
-#Additional hardware support
+#On-demand hardware support (modules.cpio)
 CONFIG_LINUX_USB=y
 CONFIG_LINUX_E1000E=y
 CONFIG_MOBILE_TETHERING=y
 
+#Modules packed into tools.cpio
 CONFIG_CRYPTSETUP2=y
 CONFIG_FLASHROM=y
 CONFIG_FLASHTOOLS=y
@@ -31,25 +32,28 @@ CONFIG_UTIL_LINUX=y
 CONFIG_LVM2=y
 CONFIG_MBEDTLS=y
 CONFIG_PCIUTILS=y
-
-#platform locking finalization (PR0)
-CONFIG_IO386=y
-export CONFIG_FINALIZE_PLATFORM_LOCKING_PRESKYLAKE=y
-
-
+#Runtime tools to write to EC/MSR
+#CONFIG_IOTOOLS=y
+#CONFIG_MSRTOOLS=y
 #Remote attestation support
-#TPM based requirements
-export CONFIG_TPM=y
+# TPM2 requirements
+#CONFIG_TPM2_TSS=y
+#CONFIG_OPENSSL=y
 CONFIG_POPT=y
 CONFIG_QRENCODE=y
 CONFIG_TPMTOTP=y
 #HOTP based remote attestation for supported USB Security dongle
 #With/Without TPM support
 CONFIG_HOTPKEY=y
-export CONFIG_AUTO_BOOT_TIMEOUT=5
 
-#Nitrokey Storage admin tool
-CONFIG_NKSTORECLI=n
+
+#platform locking finalization (PR0)
+# This prevents SPI from being writeable outside of Heads
+CONFIG_IO386=y
+export CONFIG_FINALIZE_PLATFORM_LOCKING_PRESKYLAKE=y
+
+#Nitrokey Storage admin tool (deprecated)
+#CONFIG_NKSTORECLI=n
 
 #GUI Support
 #Console based Whiptail support(Console based, no FB):
@@ -59,10 +63,18 @@ CONFIG_NKSTORECLI=n
 CONFIG_CAIRO=y
 CONFIG_FBWHIPTAIL=y
 
-#Additional tools:
+#Additional tools (tools.cpio):
 #SSH server (requires ethernet drivers, eg: CONFIG_LINUX_E1000E)
 CONFIG_DROPBEAR=y
 
+#Runtime configuration
+#Automatically boot if HOTP is valid
+export CONFIG_AUTO_BOOT_TIMEOUT=5
+#TPM2 requirements
+#export CONFIG_TPM2_TOOLS=y
+#export CONFIG_PRIMARY_KEY_TYPE=ecc
+#TPM1 requirements
+export CONFIG_TPM=y
 export CONFIG_BOOTSCRIPT=/bin/gui-init
 export CONFIG_BOOT_REQ_HASH=n
 export CONFIG_BOOT_REQ_ROLLBACK=n
