--- a/boards/qemu-coreboot-whiptail-tpm1-hotp/qemu-coreboot-whiptail-tpm1-hotp.config
+++ b/boards/qemu-coreboot-whiptail-tpm1-hotp/qemu-coreboot-whiptail-tpm1-hotp.config
@@ -28,6 +28,8 @@ export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=y
 CONFIG_LINUX_USB=y
 CONFIG_LINUX_E1000=y
 #CONFIG_MOBILE_TETHERING=y
+#Runtime on-demand additional hardware support (modules.cpio)
+export CONFIG_LINUX_USB_COMPANION_CONTROLLER=y
 
 
 
@@ -35,6 +37,7 @@ CONFIG_LINUX_E1000=y
 ifeq "$(CONFIG_UROOT)" "y"
 CONFIG_BUSYBOX=n
 else
+#Modules packed into tools.cpio
 CONFIG_CRYPTSETUP2=y
 CONFIG_FLASHROM=y
 CONFIG_FLASHTOOLS=y
@@ -61,20 +64,16 @@ CONFIG_HOTPKEY=y
 #Nitrokey Storage admin tool (deprecated)
 #CONFIG_NKSTORECLI=n
 #GUI Support
+#Console based Whiptail support(Console based, no FB):
+CONFIG_SLANG=y
+CONFIG_NEWT=y
 #FBWhiptail based (Graphical):
 #CONFIG_CAIRO=y
 #CONFIG_FBWHIPTAIL=y
-#text-based init (generic-init and gui-init)
-CONFIG_NEWT=y
-CONFIG_SLANG=y
 #Additional tools (tools.cpio):
 #SSH server (requires ethernet drivers, eg: CONFIG_LINUX_E1000E)
 CONFIG_DROPBEAR=y
 endif
-
-#Runtime on-demand additional hardware support (modules.cpio)
-export CONFIG_LINUX_USB_COMPANION_CONTROLLER=y
-
 
 #Runtime configuration
 #Automatically boot if HOTP is valid
