--- a/config/linux-nitropad-x.config
+++ b/config/linux-nitropad-x.config
@@ -1756,7 +1756,7 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 # CONFIG_FB_ASILIANT is not set
 # CONFIG_FB_IMSTT is not set
 # CONFIG_FB_VGA16 is not set
-# CONFIG_FB_VESA is not set
+CONFIG_FB_VESA=y
 CONFIG_FB_EFI=y
 # CONFIG_FB_N411 is not set
 # CONFIG_FB_HGA is not set
