WIP: qemu boards were messed up. Next step really to have mk files for tpm2,tpm1,whiptail,fbwhiptail
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/boards/qemu-coreboot-fbwhiptail-tpm1-hotp/qemu-coreboot-fbwhiptail-tpm1-hotp.config
+++ b/boards/qemu-coreboot-fbwhiptail-tpm1-hotp/qemu-coreboot-fbwhiptail-tpm1-hotp.config
@@ -15,14 +15,24 @@ CONFIG_LINUX_CONFIG=config/linux-qemu.config
 #export CONFIG_RESTRICTED_BOOT=y
 #export CONFIG_BASIC=y
 
+#Enable HAVE_GPG_KEY_BACKUP to test GPG key backup drive (we cannot inject config under QEMU (no internal flashing))
+#export CONFIG_HAVE_GPG_KEY_BACKUP=y
+
 #Enable DEBUG output
 export CONFIG_DEBUG_OUTPUT=y
 export CONFIG_ENABLE_FUNCTION_TRACING_OUTPUT=y
 
+#On-demand hardware support (modules.cpio)
+CONFIG_LINUX_USB=y
+CONFIG_LINUX_E1000E=y
+CONFIG_MOBILE_TETHERING=y
+
+
+
+#Modules packed into tools.cpio
 ifeq "$(CONFIG_UROOT)" "y"
 CONFIG_BUSYBOX=n
 else
-#Modules packed into tools.cpio
 CONFIG_CRYPTSETUP2=y
 CONFIG_FLASHROM=y
 CONFIG_FLASHTOOLS=y
@@ -33,8 +43,8 @@ CONFIG_LVM2=y
 CONFIG_MBEDTLS=y
 CONFIG_PCIUTILS=y
 #Runtime tools to write to EC/MSR
-#CONFIG_IOTOOLS=y
-#CONFIG_MSRTOOLS=y
+CONFIG_IOTOOLS=y
+CONFIG_MSRTOOLS=y
 #Remote attestation support
 # TPM2 requirements
 #CONFIG_TPM2_TSS=y
@@ -62,6 +72,12 @@ CONFIG_FBWHIPTAIL=y
 CONFIG_DROPBEAR=y
 endif
 
+#Runtime on-demand additional hardware support (modules.cpio)
+export CONFIG_LINUX_USB_COMPANION_CONTROLLER=y
+CONFIG_LINUX_USB=y
+CONFIG_LINUX_E1000=y
+
+
 #Runtime configuration
 #Automatically boot if HOTP is valid
 export CONFIG_AUTO_BOOT_TIMEOUT=5
@@ -78,8 +94,6 @@ export CONFIG_BOOT_REQ_ROLLBACK=n
 export CONFIG_BOOT_RECOVERY_SERIAL="/dev/ttyS0"
 export CONFIG_BOOT_KERNEL_ADD="console=ttyS0 console=tty systemd.zram=0"
 export CONFIG_BOOT_KERNEL_REMOVE="quiet rhgb splash"
-
-export CONFIG_TPM=y
 
 export CONFIG_BOOT_DEV="/dev/vda1"
 export CONFIG_BOARD_NAME="qemu-coreboot-fbwhiptail-tpm1-hotp"
