nv41/ns50: cherry-picks of Dasharo/heads and adapt through make BOARD=nitropad-n[v41/s50] coreboot.modify_and_save_oldconfig_in_place
Delete traces of nitrokey coreboot fork in Heads master. Use Dasharo instead to reduce moderation needs

Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/boards/nitropad-nv41/nitropad-nv41.config
+++ b/boards/nitropad-nv41/nitropad-nv41.config
@@ -1,14 +1,12 @@
 # Nitrokey Nitropad NV41 board configuration
+# Note: for reference, other GOP enabled FB board is librem_11
 
 export CONFIG_COREBOOT=y
-export CONFIG_COREBOOT_VERSION=nitrokey
+export CONFIG_COREBOOT_VERSION=dasharo
 export CONFIG_LINUX_VERSION=6.1.8
 
 CONFIG_COREBOOT_CONFIG=config/coreboot-nitropad-nv41.config
 CONFIG_LINUX_CONFIG=config/linux-nitropad-x.config
-
-#Enable blobs packed under coreboot at build time
-CONFIG_NITROKEY_BLOBS=y
 
 #Enable DEBUG output
 #export CONFIG_DEBUG_OUTPUT=y
