--- a/config/coreboot-nitropad-nv41.config
+++ b/config/coreboot-nitropad-nv41.config
@@ -523,18 +523,16 @@ CONFIG_UNLOCK_FLASH_REGIONS=y
 CONFIG_BIOS_VENDOR="3mdeb"
 
 #
-# =================================== Dasharo ====================================
+# Dasharo
 #
 
 #
 # Dasharo Configuration
 #
 CONFIG_DASHARO_PREFER_S3_SLEEP=y
+# CONFIG_DASHARO_FIRMWARE_UPDATE_MODE is not set
 # end of Dasharo Configuration
 
-#
-# ================================================================================
-#
 CONFIG_UDK_BASE=y
 CONFIG_UDK_202005_BINDING=y
 CONFIG_UDK_2013_VERSION=2013
@@ -703,7 +701,7 @@ CONFIG_VBOOT_LIB=y
 #
 # Trusted Platform Module
 #
-# CONFIG_NO_TPM is not set
+# CONFIG_TPM1 is not set
 CONFIG_TPM2=y
 CONFIG_TPM=y
 CONFIG_MAINBOARD_HAS_TPM2=y
