WIP - NVidia dGPU support.

--- a/config/coreboot-msi_z790p_ddr4.config
+++ b/config/coreboot-msi_z790p_ddr4.config
@@ -543,6 +543,7 @@ CONFIG_DEBUG_NULL_DEREF_BREAKPOINTS_IN_ALL_STAGES=y
 # Devices
 #
 CONFIG_HAVE_LINEAR_FRAMEBUFFER=y
+CONFIG_WANT_LINEAR_FRAMEBUFFER=y
 CONFIG_HAVE_FSP_GOP=y
 # CONFIG_VGA_ROM_RUN is not set
 CONFIG_RUN_FSP_GOP=y
