WiP: stm-pe enablement with console output as debug in cbmem
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-w530-maximized.config
+++ b/config/coreboot-w530-maximized.config
@@ -557,7 +557,22 @@ CONFIG_PLATFORM_HAS_DRAM_CLEAR=y
 # end of Memory initialization
 
 # CONFIG_INTEL_TXT is not set
-# CONFIG_STM is not set
+CONFIG_STM=y
+
+#
+# SMI Transfer Monitor (STM)
+#
+CONFIG_MSEG_SIZE=0x100000
+CONFIG_STM_STMPE_ENABLED=y
+CONFIG_BIOS_RESOURCE_LIST_SIZE=0x1000
+CONFIG_STM_BINARY_FILE="3rdparty/stm/Stm/build/StmPkg/Core/stm.bin"
+CONFIG_STM_HEAPSIZE=0x46000
+CONFIG_STM_TTYS0_BASE=0x000
+CONFIG_STM_CBMEM_CONSOLE=y
+CONFIG_STM_CONSOLE_DEBUG=y
+# CONFIG_STM_CONSOLE_RELEASE is not set
+# end of SMI Transfer Monitor (STM)
+
 # CONFIG_BOOTMEDIA_LOCK_NONE is not set
 CONFIG_BOOTMEDIA_LOCK_CONTROLLER=y
 # CONFIG_BOOTMEDIA_LOCK_CHIP is not set
