--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -307,22 +307,8 @@ workflows:
             - x230-hotp-maximized
 
       - build:
-          name: x230-legacy-flash
-          target: x230-legacy-flash
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: x230-legacy
-          target: x230-legacy
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: x230-hotp-legacy
-          target: x230-hotp-legacy
+          name: t420-maximized
+          target: t420-maximized
           subcommand: ""
           requires:
             - x230-hotp-maximized
