--- a/boards/qemu-coreboot-whiptail-tpm1-hotp/qemu-coreboot-whiptail-tpm1-hotp.config
+++ b/boards/qemu-coreboot-whiptail-tpm1-hotp/qemu-coreboot-whiptail-tpm1-hotp.config
@@ -6,7 +6,7 @@
 # the VM.
 export CONFIG_COREBOOT=y
 export CONFIG_COREBOOT_VERSION=24.02.01
-export CONFIG_LINUX_VERSION=5.10.5
+export CONFIG_LINUX_VERSION=5.10.214
 
 CONFIG_COREBOOT_CONFIG=config/coreboot-qemu-tpm1.config
 CONFIG_LINUX_CONFIG=config/linux-qemu.config
@@ -47,7 +47,8 @@ CONFIG_UTIL_LINUX=y
 CONFIG_LVM2=y
 CONFIG_MBEDTLS=y
 CONFIG_PCIUTILS=y
-#Runtime tools to write to MSR
+#Runtime tools to write to EC/MSR
+CONFIG_IOTOOLS=y
 CONFIG_MSRTOOLS=y
 #Remote attestation support
 # TPM2 requirements
