galp5: blobs, coreboot config; move ifd and me to blobs dir, make config point to them
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-galp5.config
+++ b/config/coreboot-galp5.config
@@ -150,8 +150,8 @@ CONFIG_MAX_ACPI_TABLE_SIZE_KB=144
 CONFIG_HAVE_INTEL_FIRMWARE=y
 CONFIG_MRC_SETTINGS_CACHE_SIZE=0x10000
 CONFIG_DRIVERS_INTEL_WIFI=y
-CONFIG_IFD_BIN_PATH="3rdparty/blobs/mainboard/$(MAINBOARDDIR)/descriptor.bin"
-CONFIG_ME_BIN_PATH="3rdparty/blobs/mainboard/$(MAINBOARDDIR)/me.bin"
+CONFIG_IFD_BIN_PATH="@BLOB_DIR@/galp5/ifd.bin"
+CONFIG_ME_BIN_PATH="@BLOB_DIR@/galp5/me.bin"
 CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x20000
 CONFIG_CARDBUS_PLUGIN_SUPPORT=y
 CONFIG_SPI_FLASH_DONT_INCLUDE_ALL_DRIVERS=y
