galp5 board: add HCL information in header as comment
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/boards/galp5/galp5.config
+++ b/boards/galp5/galp5.config
@@ -1,4 +1,4 @@
-# Configuration System76 Galago Pro 5
+# Configuration System76 Galago Pro 5 https://tech-docs.system76.com/models/galp5/README.html
 CONFIG_LINUX_CONFIG=config/linux-galp5.config
 CONFIG_COREBOOT_CONFIG=config/coreboot-galp5.config
 
